--- a/about-me.css
+++ b/about-me.css
@@ -74,6 +74,15 @@ margin: 0;
  
 footer{}
 
+.current-page{
+    border-bottom: 1px solid #707070;
+   }
+   
+    .current-page:hover{
+   color: #707070;
+   }
+
+
 @media (min-width: 675px) {
 
     .current-page{
