--- a/link.css
+++ b/link.css
@@ -79,6 +79,10 @@ footer{}
    color: #707070;
    }
 
+   nav ul{
+    align-items: center;
+   }
+
 
 @media (min-width: 675px) {
 .container-flex{
@@ -96,7 +100,8 @@ aside{
 }
 
 nav ul{
-    flex-direction: column; 
+    flex-direction: column;
+    
 }
 
 header{
