--- a/link.css
+++ b/link.css
@@ -1,398 +1,381 @@
-
 /*general setting*/
-html{
-             
+html {
 }
 
-body{margin: 0;
-    font-family: 'lora','ubuntun',sans-serif;
-font-size: 1.125rem;
-font-weight: 400;}
-
-img{
-    max-width: 100%;
-    display: block;
+.aboutme-link,
+.recentpost-link {
+  text-decoration: none;
 }
 
-header{
-      margin-bottom: 2em;
-        background-color: #f8f8f8;
-        padding: 2em 0;
-        text-align: center;
-    }
-
-
-footer{
-    background-color: #143774;
-    color: white;
-    padding: 1.5em;
+body {
+  margin: 0;
+  font-family: "lora", "ubuntun", sans-serif;
+  font-size: 1.125rem;
+  font-weight: 400;
 }
 
-
-
-.strong-underline{
-    color: #1792d2;
+img {
+  max-width: 100%;
+  display: block;
 }
 
-.copyright-footer{
-    color:#FFFFFF;
+header {
+  margin-bottom: 2em;
+  background-color: #f8f8f8;
+  padding: 2em 0;
+  text-align: center;
+}
+
+footer {
+  background-color: #143774;
+  color: white;
+  padding: 1.5em;
+}
+
+.strong-underline {
+  color: #1792d2;
+}
+
+.copyright-footer {
+  color: #ffffff;
 }
 
 /*layout*/
 
-.container{
-
-max-width: 980px;
-width: 90%;
-margin: 0 auto;
+.container {
+  max-width: 980px;
+  width: 90%;
+  margin: 0 auto;
 }
 
-.container-flex{
-display: flex;
-flex-direction: column;
-justify-content: space-between;
+.container-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-h1{
-font-family: lora;
-font-weight: 400;
-color: #142774;
-font-size: 2rem;
-margin: 0;
+h1 {
+  font-family: lora;
+  font-weight: 400;
+  color: #142774;
+  font-size: 2rem;
+  margin: 0;
 }
 
-p{
- 
-margin: 0;
+p {
+  margin: 0;
 }
 
- 
+footer {
+}
 
- 
-footer{}
+.current-page {
+  border-bottom: 1px solid #707070;
+}
 
-.current-page{
-    border-bottom: 1px solid #707070;
-   }
-   
-    .current-page:hover{
-   color: #707070;
-   }
+.current-page:hover {
+  color: #707070;
+}
 
-   nav ul{
-    align-items: center;
-   }
-
+nav ul {
+  align-items: center;
+}
 
 @media (min-width: 675px) {
-.container-flex{
+  .container-flex {
     flex-direction: row;
-}
+  }
 
-main{
+  main {
     width: 70%;
-}
+  }
 
-aside{
+  aside {
     width: 25%;
     min-width: 200px;
     margin-left: 1em;
-}
+  }
 
-nav ul{
+  nav ul {
     flex-direction: column;
-    
-}
+  }
 
-header{
+  header {
     vertical-align: top;
-}
+  }
 
-nav ul{
+  nav ul {
     margin: 0;
-}
-
+  }
 }
 
 /*navigation*/
 
-nav a{
-        font-size: 1rem;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        text-decoration: none;
-        color: #707070;
-        font-weight: 700;
-        padding: 0.25em 0;
-    }
-
-nav  ul{list-style: none;
-   align-items: center;
-    display: flex;
-    justify-content: center;
-    padding: 0;
-     flex-direction: column;
+nav a {
+  font-size: 1rem;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  text-decoration: none;
+  color: #707070;
+  font-weight: 700;
+  padding: 0.25em 0;
 }
 
-.paragrah-blog{
-font-size: 0.75rem;
-font-weight: 700;
-color: #1792d2;
+nav ul {
+  list-style: none;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  flex-direction: column;
 }
 
-nav a:hover, 
-nav a:focus{
-    
-    color: #1792d2;
-    
+.paragrah-blog {
+  font-size: 0.75rem;
+  font-weight: 700;
+  color: #1792d2;
 }
 
-nav li{
-   
-    margin: .5em 0;
-margin-left: 2em  ;
+nav a:hover,
+nav a:focus {
+  color: #1792d2;
 }
 
-.current-page{
- border-bottom: 1px solid #707070;
+nav li {
+  margin: 0.5em 0;
+  margin-left: 2em;
 }
 
- .current-page:hover{
-color: #707070;
+.current-page {
+  border-bottom: 1px solid #707070;
 }
 
- 
+.current-page:hover {
+  color: #707070;
+}
 
 /*main page*/
 
-h1,h2,h2{
-    
-    font-family: 'lora',sans-serif;
-    font-weight: 400;
-    color: #143774;
+h1,
+h2,
+h2 {
+  font-family: "lora", sans-serif;
+  font-weight: 400;
+  color: #143774;
 }
 
-a{
-    color: #1792d2;
+a {
+  color: #1792d2;
 }
 
-a:hover, a:focus{
-    color: #143774;
+a:hover,
+a:focus {
+  color: #143774;
 }
 
-h1{
-   
-    font-size: 2rem;
-    margin: 0;
+h1 {
+  font-size: 2rem;
+  margin: 0;
 }
-
 
 /*the logo subtitle*/
-.subtitle{
-    font-weight: 700;
-    color: #1792d2;
-    font-size: .75rem;
-    margin: 0;
+.subtitle {
+  font-weight: 700;
+  color: #1792d2;
+  font-size: 0.75rem;
+  margin: 0;
 }
 
-.article-title{
-    font-size: 1.5rem;
-    margin: 1em 0;
+.article-title {
+  font-size: 1.5rem;
+  margin: 1em 0;
 }
 
 .article-read-more,
-.article-info{
-    font-size: .875rem;
+.article-info {
+  font-size: 0.875rem;
 }
 
-.article-info{
-    margin-top: 1em ;
-    margin-bottom: 0;
+.article-info {
+  margin-top: 1em;
+  margin-bottom: 0;
 }
 
-.article-read-more{
-    color: #1792d2;
-    text-decoration: none;
-    font-weight: 700;
-     display: block;
-    margin-top: 1em;
-    margin-bottom: 0.5em;
+.article-read-more {
+  color: #1792d2;
+  text-decoration: none;
+  font-weight: 700;
+  display: block;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
 }
 
 .article-read-more:hover,
-.article-read-more:focus{
-color: #143774;
-text-decoration: underline;
+.article-read-more:focus {
+  color: #143774;
+  text-decoration: underline;
 }
 
-strong{
-    text-decoration: underline;
-    color: #1792d2;
+strong {
+  text-decoration: underline;
+  color: #1792d2;
 }
 
-span{
-    font-weight: bold;
+span {
+  font-weight: bold;
 }
 
-.container-flex{
-    display: flex;
-justify-content: space-between;
+.container-flex {
+  display: flex;
+  justify-content: space-between;
 }
 
 /*articles*/
-.article-featured{
-    border-bottom: #707070 1px solid;
-    padding-bottom: 1em;
-    margin-bottom: 2em;
+.article-featured {
+  border-bottom: #707070 1px solid;
+  padding-bottom: 1em;
+  margin-bottom: 2em;
 }
 
-.article-recent{
+.article-recent {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2em;
+}
+
+.article-recent-main {
+  order: 2;
+}
+
+.article-recent-secondary {
+  order: 1;
+}
+
+@media (min-width: 675px) {
+  .current-page {
+    border-bottom: 1px solid #707070;
+  }
+
+  .current-page:hover {
+    color: #707070;
+  }
+
+  .article-recent {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 2em;
+    justify-content: space-between;
+  }
+
+  .article-title {
+    margin: 0;
+    padding: 0;
+  }
+
+  .article-recent-main {
+    order: 2;
+
+    width: 68%;
+  }
+
+  .article-recent-secondary {
+    order: 1;
+    width: 30%;
+  }
+
+  .article-image {
+    object-fit: cover;
+  }
+
+  .first-one {
+    margin: 1em 0;
+  }
+
+  nav ul {
+    list-style: none;
+
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    flex-direction: row;
+  }
+
+  .article-featured {
     display: flex;
     flex-direction: column;
-    margin-bottom: 2em;
-}
+  }
 
-.article-recent-main{
-    order:2;
-}
+  .article-image {
+    order: -2;
+  }
 
-.article-recent-secondary{
-    order: 1;
-}
+  .article-info {
+    order: -1;
+  }
 
-@media (min-width: 675px){
-    .current-page{
-        border-bottom: 1px solid #707070;
-       }
-       
-        .current-page:hover{
-       color: #707070;
-       }
-
-    .article-recent{
-        display: flex;
-        flex-direction: row;
-        margin-bottom: 2em;
-        justify-content: space-between;
-    }
-    
-    .article-title{margin: 0;
-    padding: 0;
-}
-
-    .article-recent-main{
-        order:2;
-         
-        width: 68%;
-       
-    }
-    
-    .article-recent-secondary{
-        order: 1;
-        width: 30%;
-    }
-
-    .article-image{
-         
-        object-fit: cover;
-    }
-
-   
-
-    .first-one{
-        margin: 1em 0;
-    }
-
-    nav  ul{list-style: none;
-   
-        display: flex;
-        justify-content: center;
-        padding: 0;
-         flex-direction: row;
-    }
-
-    .article-featured{
-        display: flex;
-        flex-direction: column;
-    }
-
-    .article-image{
-        order: -2;
-    }
-
-    .article-info{
-        order: -1;
-    }
-
-.article-title{
+  .article-title {
     margin-bottom: 0.75em;
+  }
 }
-}
-
-
 
 /*widgets*/
 
-.widget-title{
+.widget-title {
+  font-family: sans-serif;
+  font-weight: 700;
+
+  margin-top: 0.5em;
+}
+
+.sidebar-widget {
+  border: 10px solid #ebebeb;
+  padding: 1em;
+  margin-bottom: 2em;
+  padding-top: 0;
+  margin-top: 0;
+}
+
+.widget-body {
+  letter-spacing: 0.1em;
+}
+
+.first-sidebar-img {
+  margin-bottom: 1em;
+}
+
+.widget-title,
+.widget-post-title {
+  font-size: 1rem;
+}
+
+.widget-recent-post {
+  display: flex;
+  flex-direction: column;
+}
+
+.widget-post-title {
+  order: 2;
+}
+
+.last-title {
+  margin-bottom: 0;
+}
+@media (min-width: 675px) {
+  .widget-title {
+    opacity: 1;
+    padding-top: 0;
+    margin-bottom: 0.5em;
     font-family: sans-serif;
-    font-weight: 700;
-    
-    margin-top:.5em ;
-}
+  }
 
-.sidebar-widget{
-    border: 10px solid #EBEBEB;
-    padding: 1em;
-    margin-bottom: 2em;
-    padding-top:0 ;
+  .sidebar-widget {
+    border: 10px solid #ebebeb;
+    padding: 0.5em 1em 1em 1em;
     margin-top: 0;
-}
-
-.widget-body{
-    letter-spacing: 0.1em;
-    
-}
-
-.first-sidebar-img{
-    margin-bottom: 1em;
-}
-
-.widget-title, 
-.widget-post-title{
-   font-size: 1rem;
-}
-
-.widget-recent-post{
-    display: flex;
-    flex-direction: column;
-}
-
-.widget-post-title{
-    order: 2;
-}
-
-.last-title{
-    margin-bottom: 0;
-}
-@media (min-width: 675px){
-    .widget-title{
-        opacity: 1;
-        padding-top: 0;
-        margin-bottom: 0.5em ;
-        font-family: sans-serif;
-    }
-
-    .sidebar-widget{
-        border: 10px solid #EBEBEB;
-        padding: 0.5em 1em 1em 1em;
-        margin-top: 0;
-        
-       
-    }
-    
+  }
 }
 
 /*footer*/
-.p-strong{
-    text-decoration: none;
-    color: white;
+.p-strong {
+  text-decoration: none;
+  color: white;
 }
