--- a/featured.css
+++ b/featured.css
@@ -4,13 +4,13 @@
   margin: 0;
   box-sizing: border-box;
   color: black;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 p {
   letter-spacing: 0.1em;
   font-size: 1.2rem;
-  margin-bottom: 1em;
+
+  line-height: 1.7;
 }
 
 /* HEADER */
@@ -19,9 +19,71 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 0.2em;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 79%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.199);
+}
+
+.home:hover,
+.about-us:hover,
+.whitepaper:hover {
+  color: white;
 }
 
 /* BODY */
+body {
+  font-family: "inter", Times, serif;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 79%,
+    rgba(0, 212, 255, 1) 100%
+  );
+}
+
+/* FOOTER */
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 5%;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 79%,
+    rgba(0, 212, 255, 1) 100%
+  );
+  box-shadow: 0px 20px 30px 0px rgb(0, 0, 0);
+  z-index: 2;
+
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+footer .terms {
+  display: flex;
+}
+
+footer p a {
+  color: white;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 0.7em;
+  font-weight: 700;
+}
 
 /* CONTAINER */
 
@@ -30,6 +92,15 @@ main {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 7%;
+  margin-bottom: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+main p {
+  margin-bottom: 1em;
 }
 
 /* nav */
@@ -58,11 +129,24 @@ a {
   cursor: pointer;
 }
 
+/* ICONS */
+.icons-box {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 10%;
+}
+
+.icon {
+  width: 30px;
+  height: 30px;
+}
+
 /* ANCHOR /LINK */
 
 nav a:link {
   text-decoration: none;
-
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
   font-size: large;
   color: black;
@@ -78,7 +162,7 @@ nav a:link {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
   font-size: large;
-  color: black;
+  color: orange;
 }
 
 .get-paid {
@@ -105,9 +189,13 @@ nav a:link {
   font-size: 2em;
 }
 
-.mining {
-  margin-bottom: 1em;
+.roadmap {
+  margin-bottom: 0.5em;
   text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 700;
+  color: #444;
+  font-size: 2em;
 }
 
 .model {
@@ -122,6 +210,15 @@ nav a:link {
   clip-path: circle();
 }
 
+/* LIST */
+ul li {
+  font-size: 1.5em;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 700;
+  color: white;
+  padding-bottom: 0.6em;
+}
+
 /* ol>li */
 ol li {
   margin-left: 1em;
@@ -131,9 +228,33 @@ ol li {
 ul li {
   text-align: center;
   list-style: none;
-  margin-bottom: 1em;
+  margin-bottom: 0em;
 }
 
 .current-page {
-  border-bottom: 2px solid #444;
+  padding: 0.1em;
+  display: flex;
+  border-bottom: 1px solid orange;
+}
+.current-page:hover {
+}
+
+.learn-more {
+  color: #548790;
+  font-weight: 700;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.container-roadmap {
+  box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.548);
+  padding: 1em;
+  margin-bottom: 2em;
+  width: 50%;
+  background-color: rgba(0, 0, 0, 0.315);
+}
+/* LAYOUT */
+.container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 2em;
 }
