--- a/aboutus.css
+++ b/aboutus.css
@@ -4,7 +4,7 @@
   margin: 0;
   box-sizing: border-box;
   color: black;
-  font-family: ;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 header {
@@ -14,6 +14,18 @@ header {
   box-shadow: 0px 20px 30px 0px rgba(0, 0, 0, 0.199);
   font-size: 1.5em;
   padding: 0.2em;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 3;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 79%,
+    rgba(0, 212, 255, 1) 100%
+  );
 }
 
 p {
@@ -21,6 +33,7 @@ p {
   font-size: 2rem;
   line-height: 1.7;
   color: #444;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 body {
@@ -64,6 +77,7 @@ section {
 
 /* ARTICLE */
 .article-one {
+  margin-top: 7em;
 }
 
 .article-two {
@@ -72,13 +86,15 @@ section {
 /* MAIN */
 main {
   padding: 0 2em;
+  z-index: 0;
 }
 
 /* nav */
-nav {
+.nav-items {
   display: flex;
   justify-content: right;
   gap: 2em;
+
   /* background-color: blue; */
 }
 
@@ -91,12 +107,14 @@ h1 {
 
 h4 {
   margin-bottom: 1em;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 h3 {
   text-align: center;
   font-size: 2rem;
   margin: 1em;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 /* anchor */
@@ -109,7 +127,7 @@ a {
 
 /* ANCHOR /LINK */
 
-nav a:link {
+.nav-items a:link {
   text-decoration: none;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
@@ -301,14 +319,13 @@ section {
   margin-left: 1.5rem;
 }
 
+/* TEAM ICONS */
+
 /* FLEX-LAYOUT */
 .container {
   display: flex;
   flex-direction: column;
   row-gap: 1em;
-}
-
-header {
 }
 
 .article-one {
@@ -318,4 +335,12 @@ header {
 }
 
 section {
+}
+
+.mobile-nav-icons {
+  display: none;
+}
+
+.hidden {
+  display: none;
 }
