--- a/featured.css
+++ b/featured.css
@@ -9,7 +9,7 @@
 p {
   letter-spacing: 0.1em;
   font-size: 1.2rem;
-
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   line-height: 1.7;
 }
 
@@ -104,7 +104,7 @@ main p {
 }
 
 /* nav */
-nav {
+.nav-items {
   display: flex;
   justify-content: right;
   gap: 2em;
@@ -124,6 +124,7 @@ h3,
 h4 {
   margin-bottom: 0.5em;
   text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 /* anchor */
@@ -147,7 +148,7 @@ a {
 
 /* ANCHOR /LINK */
 
-nav a:link {
+.nav-items a:link {
   text-decoration: none;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: bold;
@@ -248,7 +249,7 @@ ul li {
 
 .learn-more {
   color: #548790;
-
+  text-decoration: underline;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
@@ -269,4 +270,12 @@ ul li {
   display: flex;
   flex-direction: column;
   row-gap: 2em;
+}
+
+.mobile-nav-icons {
+  display: none;
+}
+
+.hidden {
+  display: none;
 }
