--- a/style.css
+++ b/style.css
@@ -57,20 +57,25 @@ body {
   background-position-x: left;
   background-repeat: no-repeat;
   width: 100%;
-  position: relative;
+  overflow-x: hidden;
+  /* position: relative; */
 }
 
 /* CONTAINER */
 
 /* MAIN */
 main {
+  display: flex;
+  flex-direction: column;
   padding: 0 2em;
   margin-top: 3%;
   padding-top: 8em;
+  height: 100vh;
+  /* position: relative; */
 }
 
 /* nav */
-nav {
+.nav-items {
   display: flex;
   justify-content: right;
   gap: 2em;
@@ -92,12 +97,15 @@ nav {
 .coin-list {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 0.3em;
   margin: 0.3em;
-
+  /* position: absolute; */
   width: 35%;
   cursor: pointer;
-  margin-left: 40em;
+  /* bottom: 5em; */
+  /* right: 5em; */
+  /* margin-left: 40em; */
 }
 
 .cryto-img {
@@ -174,8 +182,13 @@ a {
 }
 
 /* ANCHOR /LINK */
+/* .nav-items {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+} */
 
-nav a:link {
+.nav-items a:link {
   text-decoration: none;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: 600;
@@ -213,6 +226,12 @@ nav a:link {
   border: none;
   cursor: pointer;
 }
+/* .explore-link {
+  color: black;
+}
+.explore-link:hover {
+  color: #fff;
+} */
 .explore-more:hover {
   color: white;
   background-color: orange;
@@ -259,4 +278,12 @@ nav a:link {
   display: flex;
   flex-direction: column;
   gap: 1em;
+}
+
+.mobile-nav-icons {
+  display: none;
+}
+
+.hidden {
+  display: none;
 }
